feat(memory): add long-term user memory with E5 embedding
- Add UserMemoryService: Qdrant user-memories (384-dim, Cosine)
- Add MemoryExtractionService: async fact extraction via flash-lite
- Add MemoryRetentionAdvisor: StreamAdvisor post-stream extraction
- Add MemoryTools: recall_memories agentic tool for user context
- Add AugmentedToolCallbackProvider: reasoning logger for tools
- Add LocalEmbeddingConfig: multilingual-e5-small ONNX wrappers
- Migrate embedding: MiniLM-L6-v2 to multilingual-e5-small
- Upgrade Spring AI 1.1.0 to 1.1.4, pin ONNX Runtime 1.19.2
- Replace RequiredArgsConstructor with explicit constructors
- Update docker-compose.prod: E5 volume, RAM 768 to 1024MB
- Update README: Memory docs, E5 download, compact tuning